--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,10 +8,7 @@ body {
 .mainContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding-top: 40px;
-  padding-left: 10%;
-  padding-right: 10%;
 }
 
 .gameViewContainer {
@@ -27,14 +24,14 @@ body {
 }
 
 .title {
+  display: flex;
+  justify-content: center;
   font-size: 75px;
-  text-align: center;
   color: #9bcfff;
   margin-bottom: 5px;
   overflow: hidden;
-  text-overflow: ellipsis;
+  /* text-overflow: ellipsis; */
   white-space: nowrap;
-  display: block;
   width: 100%;
   min-width: 1px;
 }
@@ -65,6 +62,9 @@ body {
 
 @media only screen and (max-width: 768px) {
   .mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-top: 25px;
   }
 
